<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayCommentActivity"
    tools:layout_editor_absoluteY="81dp">

    <ListView
        android:id="@+id/historyList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHistory" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_comment"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/commentButton"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_comment"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/editComment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editbutton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:onClick="edit_and_store"
        android:text="@string/button_edit"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/editHistory"
        app:layout_constraintTop_toBottomOf="@+id/commentButton" />

    <EditText
        android:id="@+id/editHistory"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/edit_here"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />

</android.support.constraint.ConstraintLayout>