<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loveButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="love"
        android:text="@string/button_love"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/angerButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:onClick="anger"
        android:text="@string/button_anger"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sadnessButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:onClick="sadness"
        android:text="@string/button_sadness"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angerCount" />

    <Button
        android:id="@+id/surpriseButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="surprise"
        android:text="@string/button_surprise"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joyCount" />

    <Button
        android:id="@+id/fearButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:onClick="fear"
        android:text="@string/button_fear"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadnessCount" />

    <Button
        android:id="@+id/joyButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="joy"
        android:text="@string/button_joy"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveCount" />

    <TextView
        android:id="@+id/loveCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveButton" />

    <TextView
        android:id="@+id/joyCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joyButton" />

    <TextView
        android:id="@+id/surpriseCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surpriseButton" />

    <TextView
        android:id="@+id/angerCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angerButton" />

    <TextView
        android:id="@+id/sadnessCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadnessButton" />

    <TextView
        android:id="@+id/fearCount"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fearButton" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="viewHistory"
        android:text="History"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>